--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="insurance-company-your-logo-design-template-de2398bb234024633dcd5a368a37201a_screen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\insurance-company-your-logo-design-template-de2398bb234024633dcd5a368a37201a_screen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Safety Broker Secure" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Safety Broker Secure.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
