--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="insurance-company-your-logo-design-template-de2398bb234024633dcd5a368a37201a_screen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\insurance-company-your-logo-design-template-de2398bb234024633dcd5a368a37201a_screen.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="image1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Safety Broker Secure" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Safety Broker Secure.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,7 +142,7 @@
   <data name="Safety Broker Secure4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Safety Broker Secure.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="image1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\image1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Safety Broker Secure (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Safety Broker Secure (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
